tests/neg/with-type-operator-future.scala
import scala.language.`future`

def foo: Int with String = ??? // error
